--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -63,10 +63,10 @@
     
     <!-- Index -->
     
-    <li><a href="##welcome!">About</a></li>
+    <li><a href="#welcome!">About</a></li>
     
     <li><a href="#research">Research</a></li>
-    <li><a href="##job-market-paper">JMP</a></li>
+    <li><a href="#job-market-paper">JMP</a></li>
     <li><a href="#teaching">Teaching</a></li>
     <li><a href="#policy-work-and-others">Policy</a></li>
 
