--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -63,12 +63,15 @@
     
     <!-- Index -->
     
-    <li><a href="#welcome!">About</a></li>
-    
-    <li><a href="#research">Research</a></li>
-    <li><a href="#job-market-paper">JMP</a></li>
-    <li><a href="#teaching">Teaching</a></li>
-    <li><a href="#policy-work-and-others">Policy</a></li>
+    <a href="#welcome">About</a>
+    <br>
+    <a href="#research">Research</a>
+    <br>
+    <a href="#job-market-paper">JMP</a>
+    <br>
+    <a href="#teaching">Teaching</a>
+    <br>
+    <a href="#policy-work-and-others">Policy</a>
 
      </body>
     <!---  Blank line  --->
