--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -71,6 +71,7 @@ body {
 a {
   /*color: #268bd2;*/
   color: #515151;
+  text-decoration: none; /* this line takes away the underline of the hyperlink*/
   /* text-decoration: underline; */
   /*text-decoration-color: gold;*/
 }
@@ -83,6 +84,7 @@ a strong {
 /* a hover is when you move the mouse over a hyperlink and it pops up*/
 a:hover,
 a:focus {
+  color: gray;
   /*text-decoration: none;*/
   text-decoration-color: gray;
   /*background-color: gold*/
