--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -122,6 +122,7 @@ a.sidebar-nav-item {
 }
 a.sidebar-nav-item:hover,
 a.sidebar-nav-item:focus {
+  color: gray;
   /* text-decoration: underline; */
   text-decoration-color: gold;
 }
