--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -67,7 +67,7 @@
     <br>
     <a href="#research">Research</a>
     <br>
-    <a href="#teaching" style="color: gray">Teaching</a>
+    <a href="#teaching">Teaching</a>
     <br>
     <a href="#policy-work-and-others">Policy</a>
 
