--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -409,11 +409,13 @@ tbody tr:nth-child(odd) th {
   color: #999;
 }
 .related-posts li a:hover {
-  color: #268bd2;
+  color: gold;
+  /*color: #268bd2; */
   text-decoration: none;
 }
 .related-posts li a:hover small {
-  color: inherit;
+  color: gold;
+  /*color: inherit;*/
 }
 
 
