--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -94,6 +94,15 @@ html {
   color: #fff;
   text-decoration: none;
 }
+/* a hover is when you move the mouse over a hyperlink and it pops up*/
+a:hover,
+a:focus {
+  color: pink;
+  /*color: gray; */
+  /*text-decoration: none;*/
+  /* text-decoration-color: gray; */
+  /*background-color: gold*/
+}
 
 /* About section */
 .sidebar-about h1 {
