--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -84,7 +84,7 @@ a strong {
 /* a hover is when you move the mouse over a hyperlink and it pops up*/
 a:hover,
 a:focus {
-  color: pink;
+  color: gray;
   /*color: gray; */
   /*text-decoration: none;*/
   /* text-decoration-color: gray; */
