--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,10 +10,9 @@
         <!-- <a href="{{ '/' | relative_url }}"> -->
        <!-- Add page title -->
        <h3>
-        <a href="https://www.cemfi.es/" target="_blank">
+        <a href="https://pelloaspuru.github.io/" style="color :white;">
          <p style="color :white; font-size: 2rem; margin-bottom: 1px;"> Pello Aspuru
          </a>
-        <p style="color :white; font-size: 2rem; margin-bottom: 1px;"> Pello Aspuru <!--{{ site.title }} -->
       </h3>
       <!-- Add page subtitle title -->
       <p style="font-size: 1.0rem" class="lead"> PhD Student, CEMFI <!--{{ site.description }} -->
