--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -67,7 +67,7 @@
     <br>
     <a href="#welcome">About</a>
     <br>
-    <a href="#research">Research</a>
+    <a href="#job-market-paper">Research</a>
     <br>
     <a href="#teaching">Teaching</a>
     <br>
