--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -97,7 +97,7 @@ html {
 /* a hover is when you move the mouse over a hyperlink and it pops up*/
 a:hover,
 a:focus {
-  color: white;
+  color: brightness(2.0);
   /*color: gray; */
   /*text-decoration: none;*/
   /* text-decoration-color: gray; */
