--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,6 +17,8 @@
       <!-- Add page subtitle title -->
       <p style="font-size: 1.0rem" class="lead"> PhD Student, CEMFI <!--{{ site.description }} -->
       </p>
+      <p style="font-size: 1.0rem" class="lead"> pello.aspuru@cemfi.edu.es <!--{{ site.description }} -->
+      </p>
     
     <body>
       <!-- <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a>
