--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,7 +15,9 @@
          </a>
       </h3>
       <!-- Add page subtitle title -->
-      <p style="font-size: 1.0rem" class="lead"> PhD Student, CEMFI <!--{{ site.description }} -->
+      <p style="font-size: 1.0rem" class="lead"> 
+        PhD Student, CEMFI 
+        pello.aspuru@cemfi.edu.es
       </p>
       <p style="font-size: 1.0rem" class="lead"> pello.aspuru@cemfi.edu.es <!--{{ site.description }} -->
       </p>
