--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
     <div class="sidebar-about">
         <!-- Add a profile picture in the sidebar -->
         <!-- <img src="/photos/PELLO (53).jpg" alt="Pello" class="inline"/>  --> <!---  Vertical pic, original  --->
-        <img src="/photos/PELLO (53) black_white.jpg" alt="Pello" class="inline"/>  <!---  Vertical pic, black and white  --->
+        <img src="/photos/pello_black_white_square_1.jpg" alt="Pello" class="inline"/>  <!---  Vertical pic, black and white  --->
         <!-- <img src="/photos/PELLO (82).jpg" alt="Pello" class="inline"/> --> <!---  horizontal pic, close face  --->
         <!-- <a href="{{ site.baseurl }}"> -->
         <!-- <a href="{{ '/' | relative_url }}"> -->
