--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -84,7 +84,7 @@ html {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 18rem;
+    width: 14rem; /* Establishes the width of the left sidebar */
     text-align: right;
   }
 }
