--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,9 +17,9 @@
       </h4>
       <!-- Add page subtitle title -->
       <p style="font-size: 0.9rem" class="lead"> 
-        PhD Student, CEMFI 
+        PhD Student, <a href="https://www.cemfi.es/" target="_blank">CEMFI</a> 
         <br>
-        pello.aspuru@cemfi.edu.es
+        <a href="mailto:pello.aspuru@cemfi.edu.es">pello.aspuru@cemfi.edu.es</a>
       </p>
     
     <body>
