--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -40,6 +40,39 @@
     /*font-weight: normal; */
 }
 
+/* Define a new type of fonts: CooperHewitt */
+
+@font-face {
+    font-family: "CooperHewitt";
+    src: url('/fonts/cooper_hewitt/CooperHewitt-Heavy.ttf') format('truetype');
+    /*font-style: sans-serif; */
+    font-weight: heavy;
+}
+
+@font-face {
+    font-family: "CooperHewitt";
+    src: url('/fonts/cooper_hewitt/CooperHewitt-HeavyItalic.ttf') format('truetype');
+    /* font-style: sans-serif; */
+    font-weight: heavy_italic; 
+}
+
+@font-face {
+    font-family: "CooperHewitt";
+    src: url('/fonts/cooper_hewitt/CooperHewitt-Bold.ttf') format('truetype');
+    /*font-style: sans-serif; */
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: "CooperHewitt";
+    src: url('/fonts/cooper_hewitt/CooperHewitt-BoldItalic.ttf') format('truetype');
+    /* font-style: sans-serif; */
+    font-weight: bold_italic; 
+}
+
+
+/* Define the standard text */
+
 html {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
 }
