--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
        <!-- Add page title -->
        <h1>
         <a href="https://pelloaspuru.github.io/" style="color :white;">
-         <p style="color :white; font-size: 1.8rem; margin-bottom: 1px;"> Pello Aspuru
+         <p style="color :white; font-size: 1.8rem; margin-bottom: 1px;"> PELLO ASPURU
          </a>
       </h1>
       <!-- Add page subtitle title -->
