--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,10 +12,10 @@
        <!-- Add page title -->
        <h1>
         <a href="https://pelloaspuru.github.io/" style="color :white;">
-         <p style="color :white; font-size: 1.8rem; margin-bottom: 1px;"> PELLO ASPURU
+         <p style="color :white; font-size: 1.6rem; margin-bottom: 1px;"> PELLO ASPURU
          </a>
       </h1>
-      <!-- Add page subtitle title -->
+      <!-- Add page subtitle -->
       <p style="font-size: 0.9rem" class="lead"> 
         PhD Student, <a href="https://www.cemfi.es/" target="_blank">CEMFI</a> 
         <br>
