--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -48,7 +48,8 @@ body {
 }
 
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'CooperHewitt', sans-serif; 
+  font-weight: book;
   font-size: 16px;
   line-height: 1.5;
 }
