--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -126,12 +126,14 @@
     font-weight: semibold;
 }
 
+/*
 @font-face {
     font-family: "CooperHewitt";
     src: url('/fonts/cooper_hewitt/CooperHewitt-SemiboldItalic.ttf') format('truetype');
     font-style: sans-serif;
     font-weight: semibold_italic; 
 }
+*/
 
 /* Define the standard text */
 
