--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -48,8 +48,8 @@ body {
 }
 
 html {
-  font-family: 'CooperHewitt', sans-serif; 
-  font-weight: book;
+  font-family: 'RotisSemiSans', sans-serif; 
+  font-weight: bold;
   font-size: 16px;
   line-height: 1.5;
 }
