--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -48,7 +48,8 @@ body {
 }
 
 html {
-  font-family: 'RotisSemiSans', sans-serif; 
+  font-family: 'RotisSemiSans', 
+  font-style: sans-serif; 
   font-weight: bold;
   font-size: 16px;
   line-height: 1.5;
