--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -31,37 +31,37 @@
  * Update the foundational and global aspects of the page.
  */
 
-/* Define a new type of font: Rotis Semi Sans */
+/* Define a new type of font: Rotis Semi Sans (RSS) */
 
 @font-face {
-    font-family: "RotisSemiSans";
+    font-family: "RSS_extra_bold";
     src: url('/fonts/metro_bilbao/Rotis Semi Sans Std 65 Extra Bold.otf') format('opentype');
-    font-style: sans-serif;
-    font-weight: extra_bold;
+    font-style: normal;
+    font-weight: normal;
 }
 
 @font-face {
-    font-family: "RotisSemiSans";
+    font-family: "RSS_bold";
     src: url('/fonts/metro_bilbao/Rotis Semi Sans Std 65 Bold.otf') format('opentype');
-    font-style: sans-serif;
-    font-weight: bold;
+    font-style: normal;
+    font-weight: normal;
 }
 
 @font-face {
-    font-family: "RotisSemiSans";
+    font-family: "RSS_italic";
     src: url('/fonts/metro_bilbao/Rotis Semi Sans Std 65 Italic.otf') format('opentype');
-    font-style: sans-serif;
-    font-weight: italic;
+    font-style: normal;
+    font-weight: normal;
 }
 
 @font-face {
-    font-family: "RotisSemiSans";
+    font-family: "RSS_light_italic";
     src: url('/fonts/metro_bilbao/Rotis Semi Sans Std 65 Light Italic.otf') format('opentype');
-    font-style: sans-serif;
-    font-weight: italic_light;
+    font-style: normal;
+    font-weight: normal;
 }
 
-/* Define a new type of fonts: CooperHewitt */
+/* Define a new type of fonts: CooperHewitt (CH) */
 
 @font-face {
     font-family: "CH_heavy";
