--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,11 +10,11 @@
         <!-- <a href="{{ site.baseurl }}"> -->
         <!-- <a href="{{ '/' | relative_url }}"> -->
        <!-- Add page title -->
-       <h1>
+       <!--<h1> -->
         <a href="https://pelloaspuru.github.io/" style="color :white;">
-         <p style="color :white; font-size: 1.6rem; margin-bottom: 1px;"> PELLO ASPURU
+         <h1 style="color :white; font-size: 1.6rem; margin-bottom: 1px;"> PELLO ASPURU </h1>
          </a>
-      </h1>
+      <!--</h1> -->
       <!-- Add page subtitle -->
       <p style="font-size: 0.9rem" class="lead"> 
         PhD Student, <a href="https://www.cemfi.es/" target="_blank">CEMFI</a> 
