--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -92,6 +92,9 @@ a:hover{
 /* Headings */
 
 h1, h2, h3, h4, h5, h6 {
+  font-family: 'CH_semibold';
+  font_style: normal; 
+  font-weight: normal;
   margin-bottom: .5rem;
   font-weight: bold;
   line-height: 1.25;
