--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -177,6 +177,7 @@ html {
   text-align: center;
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
+  background-image: url("/photos/PELLO (53).jpg");
   background-color: #202020;
 }
 @media (min-width: 48em) {
