--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -178,6 +178,7 @@ html {
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
   background-image: url("/photos/PELLO (53).jpg");
+  background-size: cover;
   background-color: #202020;
 }
 @media (min-width: 48em) {
