--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -177,7 +177,7 @@ html {
   text-align: center;
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
-  background-image: url("/photos/PELLO (53).jpg");
+  background-image: url("../../photos/PELLO (53).jpg");
   background-size: cover;
   background-color: #202020;
 }
