--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,6 +9,17 @@
         <!-- <img src="/photos/PELLO (82).jpg" alt="Pello" class="inline"/> --> <!---  horizontal pic, close face  --->
         <!-- <a href="{{ site.baseurl }}"> -->
         <!-- <a href="{{ '/' | relative_url }}"> -->
+        
+        <!-- Bunch of breaks before the page title allow for my face in the background not to overlap with text -->
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+      
        <!-- Add page title -->
        <!--<h1> -->
         <a href="https://pelloaspuru.github.io/" style="color :white;">
