--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -180,6 +180,7 @@ html {
   background-color: #202020;
   background-image: url("../../photos/PELLO (53).jpg");
   background-size: cover;
+  background-position: center;
 }
 @media (min-width: 48em) {
   .sidebar {
