--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -178,7 +178,8 @@ html {
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
   background-color: #202020;
-  background-image: url("../../photos/PELLO (53).jpg");
+  /* background-image: url("../../photos/PELLO (53).jpg"); */
+  background-image: url("../../photos/PELLO (88).jpg");
   background-size: cover;
   background-position: center;
 }
