--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -179,10 +179,11 @@ html {
   color: rgba(255,255,255,.5);
   background-color: #202020;
   /* background-image: url("../../photos/PELLO (53).jpg"); */
-  background-image: url("../../photos/PELLO (88).jpg");
+  background-image: 
+      linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)),
+      url("../../photos/PELLO (88).jpg");
   background-size: cover;
   background-position: center;
-  linear-gradient(#eb01a5, #d13531); /* W3C */
 }
 @media (min-width: 48em) {
   .sidebar {
