--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -188,7 +188,7 @@ html {
 @media (min-width: 48em) {
   .sidebar {
     position: absolute;
-    top: 0;
+    /*top: 0; */
     left: 0;
     bottom: 0;
     width: 16rem; /* Establishes the width of the left sidebar */
