--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -187,8 +187,8 @@ html {
 }
 @media (min-width: 48em) {
   .sidebar {
-    position: absolute;
-    /*top: 0; */
+    position: fixed;
+    top: 0; 
     left: 0;
     bottom: 0;
     width: 16rem; /* Establishes the width of the left sidebar */
