--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -180,7 +180,7 @@ html {
   background-color: #202020;
   /* background-image: url("../../photos/PELLO (53).jpg"); */
   background-image: 
-      linear-gradient(to bottom, rgba(245, 246, 252, 0.0), rgba(117, 19, 93, 0.73)),
+      linear-gradient(to bottom, #202020 0%, #202020 70%), /*Gradient from transparent to gray*/
       url("../../photos/PELLO (88).jpg");
   background-size: cover;
   background-position: center;
