--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -187,8 +187,7 @@ html {
 }
 @media (min-width: 48em) {
   .sidebar {
-    /*position: fixed; */
-    position: bottom;
+    position: fixed;
     top: 0; 
     left: 0;
     bottom: 0;
