--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -180,7 +180,7 @@ html {
   background-color: #202020;
   /* background-image: url("../../photos/PELLO (53).jpg"); */
   background-image: 
-      linear-gradient(to bottom, rgba(32, 32, 32, 0.0), rgba(32, 32, 32, 0.7)), /*Gradient from transparent to gray*/
+      linear-gradient(to bottom, rgba(32, 32, 32, 0.0), rgba(245, 246, 252, 0.0), rgba(32, 32, 32, 0.85)), /*Gradient from transparent to gray*/
       url("../../photos/PELLO (88).jpg");
   background-size: cover;
   background-position: center;
