--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -174,10 +174,9 @@ html {
   font-family: 'CH_semibold';
   font_style: normal; 
   font-weight: normal;
-  /* text-align: center; */
-  text-align: right;
-    position: bottom;
-    left: 0;
+  text-align: center; /* Centers the sidebar content in the mobile phone version */
+  /* text-align: right; */
+    position: absolute; /* Locates the sidebar content in the bottom corner of the sidebar */
     bottom: 0;
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
