--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -178,7 +178,7 @@ html {
   /* text-align: right; */
     position: absolute; /* Locates the sidebar content in the bottom corner of the sidebar */
     bottom: 0;
-  padding: 2rem 1rem;
+  padding: 2rem 1rem; /*Sets top and bottom padding at 2rem, left-right padding at 1rem*/
   color: rgba(255,255,255,.5);
   background-color: #202020;
   /* background-image: url("../../photos/PELLO (53).jpg"); */
