--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -214,6 +214,13 @@ a:focus {
 
 /* Sidebar About section */
 
+.sidebar-about {
+  /* Make the sidebar about section to locate in the bottom of the page.*/
+  position: absolute;
+  bottom: 0;
+  padding: 2rem 1rem; /*Sets top and bottom padding at 2rem, left-right padding at 1rem*/
+}
+
 /* sidebar-about h1 sets up the characteristics of the highest level header (h1) of the sidebar about type */
 
 .sidebar-about h1 {
@@ -243,9 +250,6 @@ a:focus {
 .sidebar-about a {
   color: gray;
   text-decoration: none;
-  /* Make link in the sidebar about section to locate in the bottom of the page.*/
-  position: absolute;
-  bottom: 0;
 }
 
 /* a hover is when you move the mouse over a hyperlink and it pops up*/
