--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -73,7 +73,7 @@
       <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
       <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="display: inline-block; margin-right: 10px;" width="15" height="15" class="filter-gray-light"></a>
       <!---  In the case of the email button, we do not want it to pop up a new tab  --->
-      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="display: inline-block; margin-right: 10px;" width="15" height="15" class="#eee"></a>
+      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="display: inline-block; margin-right: 10px;" width="15" height="15" class="filter-gray-light"></a>
       <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style= "display: inline-block; margin-right: 10px;" width="15" height="15" class="filter-gray-light"></a>
       <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/google.svg" style= "display: inline-block; margin-right: 10px;" width="15" height="15" class="filter-gray-light"></a>
       <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="display: inline-block; margin-right: 10px;" width="15" height="15" class="filter-gray-light"></a>
