--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -273,6 +273,11 @@ img {
     filter: invert(49%) sepia(37%) saturate(0%) hue-rotate(195deg) brightness(107%) contrast(90%);
 }
 
+/* Very Light gray colour: HEX #eee */
+.filter-gray-verylight{
+  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(322deg) brightness(114%) contrast(87%)
+}
+
 /* Tables */
 table {
   margin-bottom: 1rem;
