--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -218,7 +218,8 @@ a:focus {
   /* Make the sidebar about section to locate in the bottom of the page.*/
   position: fixed; /*relative, sticky, absolute, fixed... check: https://www.w3schools.com/css/css_positioning.asp*/
   bottom: 0;
-  /* padding: 2rem 1rem; /*Sets top and bottom padding at 2rem, left-right padding at 1rem*/ */
+  padding: 2rem 1rem; /*Sets top and bottom padding at 2rem, left-right padding at 1rem*/
+  transform: translateX(-50%);
 }
 
 /* sidebar-about h1 sets up the characteristics of the highest level header (h1) of the sidebar about type */
