--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -216,9 +216,10 @@ a:focus {
 
 .sidebar-about {
   /* Make the sidebar about section to locate in the bottom of the page.*/
-  position: relative; /*relative, sticky, absolute, fixed... check: https://www.w3schools.com/css/css_positioning.asp*/
-  bottom: 0;
-  padding: 2rem 1rem; /*Sets top and bottom padding at 2rem, left-right padding at 1rem*/
+  position: absolute; /*relative, sticky, absolute, fixed... check: https://www.w3schools.com/css/css_positioning.asp*/
+  bottom: 3px;
+  /*bottom: 0; 
+  /*padding: 2rem 1rem; /*Sets top and bottom padding at 2rem, left-right padding at 1rem*/
 }
 
 /* sidebar-about h1 sets up the characteristics of the highest level header (h1) of the sidebar about type */
