--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -218,17 +218,14 @@ a:focus {
 .sidebar-about {
   /* Make the sidebar about section to locate in the bottom of the page.*/
   position: relative; /*relative, sticky, absolute, fixed... check: https://www.w3schools.com/css/css_positioning.asp*/
-  top: 48px;
-  bottom: 12px;
-  /*bottom: 0; 
-  /*padding: 2rem 1rem; /*Sets top and bottom padding at 2rem, left-right padding at 1rem*/
+  padding: 6rem 1rem; /*Sets top and bottom padding at 2rem, left-right padding at 1rem*/
 }
 
 /*@media establishes the website behaviour for desktop browsers*/
 @media (min-width: 50em) {
   .sidebar-about {
-    position: absolute; /*relative, sticky, absolute, fixed... check: https://www.w3schools.com/css/css_positioning.asp*/
-    bottom: 0;
+    position: fixed; /*relative, sticky, absolute, fixed... check: https://www.w3schools.com/css/css_positioning.asp*/
+    padding: 2rem 1rem;
   }
 }
 
