--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -359,25 +359,20 @@ a.sidebar-nav-item:active {
 .content {
   padding-top:    4rem;
   padding-bottom: 4rem;
+  text-align: justify;
 }
 
-@media (min-width: 48em) {
+/* @media Set up content behaviour for desktop mode (wide enough screens) */
+
+@media (min-width: 65em) {
   .content {
     /*max-width: 40rem; */
     max-width: 45rem;
-    margin-left: 20rem;
-    margin-right: 2rem;
+    margin-left: 22rem;
+    margin-right: 4rem;
     text-align: justify;
   }
 }
-
-@media (min-width: 64em) {
-  .content {
-    margin-left: 22rem;
-    margin-right: 4rem;
-  }
-}
-
 
 /*
  * Reverse layout
