--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -182,7 +182,7 @@ html {
   /* background-image: url("../../photos/PELLO (53).jpg"); */
   background-image: 
       linear-gradient(to bottom, rgba(32, 32, 32, 0.0), rgba(245, 246, 252, 0.0), rgba(32, 32, 32, 0.85)), /*Gradient from transparent to gray*/
-      url("../../photos/PELLO (88).jpg");
+      url("../../photos/PELLO (88) black_white.jpg");
   background-size: cover;
   background-position: center;
 }
