--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -57,7 +57,7 @@
       <!-- Social buttons: twitter, github, linkedin... -->
       <!---  target="_blank": The links pop um in new tabs  --->
       <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
-      <a href="/documents/CV.pdf" target="_blank"><img src="/icons/file-solid.svg" style="display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
+      <a href="main.pdf" target="_blank"><img src="/icons/file-solid.svg" style="display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
       <!---  In the case of the email button, we do not want it to pop up a new tab  --->
       <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
       <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style= "display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
