sidebar link to working papers section

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -72,7 +72,7 @@
     <br>
     <a href="#welcome">About</a>
     <br>
-    <a href="#job-market-paper">Research</a>
+    <a href="#working-papers">Research</a>
     <br>
     <a href="#teaching">Teaching</a>
     <br>
