new position and email adress

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,9 +18,9 @@
       <!--</h1> -->
       <!-- Add page subtitle -->
       <p style="font-size: 0.9rem" class="lead"> 
-        PhD Student, <a href="https://www.cemfi.es/" target="_blank">CEMFI</a> 
+        Fellow, <a href="https://policyintegrity.org/" target="_blank">Institute for Policy Integrity at NYU</a> 
         <br>
-        <a href="mailto:pello.aspuru@cemfi.edu.es">pello.aspuru@cemfi.edu.es</a>
+        <a href="mailto:pello.aspuru@nyu.edu">pello.aspuru@nyu.edu</a>
       </p>
     
     <body>
