--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,7 +18,7 @@
       <!--</h1> -->
       <!-- Add page subtitle -->
       <p style="font-size: 0.9rem" class="lead"> 
-        Fellow, <a href="https://policyintegrity.org/" target="_blank">Institute for Policy Integrity at NYU</a> 
+        Fellow, <a href="https://policyintegrity.org/" target="_blank">Policy Integrity at NYU</a> 
         <br>
         <a href="mailto:pello.aspuru@nyu.edu">pello.aspuru@nyu.edu</a>
       </p>
