--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,9 +18,9 @@
       <!--</h1> -->
       <!-- Add page subtitle -->
       <p style="font-size: 0.9rem" class="lead"> 
-        Fellow, <a href="https://policyintegrity.org/" target="_blank">Policy Integrity at NYU</a> 
+        Assistant Professor, <a href="https://econ.univie.ac.at/" target="_blank">University of Vienna</a> 
         <br>
-        <a href="mailto:pello.aspuru@nyu.edu">pello.aspuru@nyu.edu</a>
+        <a href="mailto:aspurup99@univie.ac.at">aspurup99@univie.ac.at</a>
       </p>
     
     <body>
