--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -59,7 +59,7 @@
       <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
       <a href="resume/pello_resume.pdf" target="_blank"><img src="/icons/file-solid.svg" style="display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
       <!---  In the case of the email button, we do not want it to pop up a new tab  --->
-      <a href="mailto:pello.aspuru@cemfi.edu.es"><img src="/icons/envelope-solid.svg" style="display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
+      <a href="mailto:aspurup99@univie.ac.at"><img src="/icons/envelope-solid.svg" style="display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
       <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style= "display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
       <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/google.svg" style= "display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
       <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
