--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,7 @@
       <p style="font-size: 0.9rem" class="lead"> 
         Assistant Professor, <a href="https://econ.univie.ac.at/" target="_blank">University of Vienna</a> 
         <br>
-        <a href="mailto:aspurup99@univie.ac.at">aspurup99@univie.ac.at</a>
+        <a href="mailto:pello.aspuru@univie.ac.at">pello.aspuru@univie.ac.at</a>
       </p>
     
     <body>
@@ -59,7 +59,7 @@
       <!---  style="float: left; margin-right: 30px;": Allows for space between icons  --->
       <a href="resume/pello_resume.pdf" target="_blank"><img src="/icons/file-solid.svg" style="display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
       <!---  In the case of the email button, we do not want it to pop up a new tab  --->
-      <a href="mailto:aspurup99@univie.ac.at"><img src="/icons/envelope-solid.svg" style="display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
+      <a href="mailto:pello.aspuru@univie.ac.at"><img src="/icons/envelope-solid.svg" style="display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
       <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/github.svg" style= "display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
       <a href="https://github.com/pelloaspuru" target="_blank"><img src="/icons/google.svg" style= "display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
       <a href="https://twitter.com/pelloaspuru" target="_blank"><img src="/icons/twitter.svg" style="display: inline-block; margin-right: 8px;" width="15" height="15" class="filter-gray-verylight"></a>
